# scpi-device

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml
doc/: lab-equiptment.md  scpi_commands_for_lab_devices.md
examples/: CMakeLists.txt
examples/test-dvm/: CMakeLists.txt  main.cpp
examples/test-osc/: CMakeLists.txt  main.cpp
examples/test-ps/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  dvm_device.cpp  osc_device.cpp  ps_device.cpp  scpi_device.cpp  scpi_device.h
